--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,3 +1,4 @@
+<p>Ask your coach anything</p>
 <form class="ask-form" action="answer" method="GET">
   <input type="text" name="question">
   <input type="submit" value="Ask">
